# fastlms

./: .gitingore  main.py  pyproject.toml
app/config/: logging_config.py  settings.py
app/db/: __init__.py  abstracts.py  db.py  object_id.py  users.py
app/logger/: __init__.py
app/models/: user.py
settings/: settings.py
