[tool.poetry]
name = "fastlms"
version = "0.1.0"
description = "Library Management System using FASTApi."
authors = ["Luke Holmes <lukemartynholmes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
python-dotenv = "^0.18.0"
motor = "^2.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
